[gd_scene load_steps=64 format=3 uid="uid://ca4svixki2bfr"]

[ext_resource type="Script" uid="uid://dwwa4m138xrp3" path="res://Scripts/Lose.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cru16y3wh6hex" path="res://Assets/frame_00_delay-0.03s3.png" id="2_uypod"]
[ext_resource type="Texture2D" uid="uid://3eq4loy2oshu" path="res://Assets/frame_01_delay-0.04s3.png" id="3_vvvwy"]
[ext_resource type="Texture2D" uid="uid://cr1grojuxayjp" path="res://Assets/frame_02_delay-0.03s3.png" id="4_hoqk3"]
[ext_resource type="Texture2D" uid="uid://cdy4i2xnoq842" path="res://Assets/frame_03_delay-0.03s3.png" id="5_68wq8"]
[ext_resource type="Texture2D" uid="uid://yvswyjd4escp" path="res://Assets/frame_04_delay-0.04s3.png" id="6_ydi0q"]
[ext_resource type="Texture2D" uid="uid://d0wsvn8gh5crm" path="res://Assets/frame_05_delay-0.03s3.png" id="7_ri1ed"]
[ext_resource type="Texture2D" uid="uid://c4kvopaimt67c" path="res://Assets/frame_06_delay-0.03s3.png" id="8_cff8e"]
[ext_resource type="Texture2D" uid="uid://irleymn8e7yf" path="res://Assets/frame_07_delay-0.04s3.png" id="9_r0uww"]
[ext_resource type="Texture2D" uid="uid://bd77dsxsc80dk" path="res://Assets/frame_08_delay-0.03s3.png" id="10_nhl53"]
[ext_resource type="Texture2D" uid="uid://cepf1yhsd064b" path="res://Assets/frame_09_delay-0.03s3.png" id="11_n6fb7"]
[ext_resource type="Texture2D" uid="uid://0p163w3l0s5x" path="res://Assets/frame_10_delay-0.04s3.png" id="12_4v3xf"]
[ext_resource type="Texture2D" uid="uid://dyh1pvxcd2l5f" path="res://Assets/frame_11_delay-0.03s3.png" id="13_wnnpp"]
[ext_resource type="Texture2D" uid="uid://ca4dlo2kulalr" path="res://Assets/frame_12_delay-0.03s3.png" id="14_6qv5y"]
[ext_resource type="Texture2D" uid="uid://bndhqm64dj58h" path="res://Assets/frame_13_delay-0.04s3.png" id="15_6ffbm"]
[ext_resource type="Texture2D" uid="uid://vfxb3q62vh4" path="res://Assets/frame_14_delay-0.03s3.png" id="16_eqf60"]
[ext_resource type="Texture2D" uid="uid://cp2vtfyrr5beb" path="res://Assets/frame_15_delay-0.03s3.png" id="17_dibpx"]
[ext_resource type="Texture2D" uid="uid://y3edaxok3igl" path="res://Assets/frame_16_delay-0.04s3.png" id="18_q3nwq"]
[ext_resource type="Texture2D" uid="uid://cy3bh85t5tc27" path="res://Assets/frame_17_delay-0.03s3.png" id="19_ylhon"]
[ext_resource type="Texture2D" uid="uid://ct0epoqifi22f" path="res://Assets/frame_18_delay-0.03s3.png" id="20_wu60t"]
[ext_resource type="Texture2D" uid="uid://cvx6wi1j0l4wl" path="res://Assets/frame_19_delay-0.04s3.png" id="21_kxsmm"]
[ext_resource type="Texture2D" uid="uid://dmolfxpk0lvdp" path="res://Assets/frame_20_delay-0.03s3.png" id="22_xvpm3"]
[ext_resource type="Texture2D" uid="uid://cgx2wx1s83klj" path="res://Assets/frame_21_delay-0.03s3.png" id="23_tyqe2"]
[ext_resource type="Texture2D" uid="uid://db07rj1ho2m3p" path="res://Assets/frame_22_delay-0.04s3.png" id="24_g6el0"]
[ext_resource type="Texture2D" uid="uid://bji7bexuc3lmf" path="res://Assets/frame_23_delay-0.03s3.png" id="25_pigkp"]
[ext_resource type="Texture2D" uid="uid://4mkbqc4d4xu0" path="res://Assets/frame_24_delay-0.03s3.png" id="26_yqe25"]
[ext_resource type="Texture2D" uid="uid://davckc3gpwfit" path="res://Assets/frame_25_delay-0.04s3.png" id="27_rllq3"]
[ext_resource type="Texture2D" uid="uid://es33v0c1s1c4" path="res://Assets/frame_26_delay-0.03s3.png" id="28_br4xl"]
[ext_resource type="Texture2D" uid="uid://bp6o23ysixcta" path="res://Assets/frame_27_delay-0.03s3.png" id="29_3i58h"]
[ext_resource type="Texture2D" uid="uid://d07itdv76qifl" path="res://Assets/frame_28_delay-0.04s3.png" id="30_uyh1s"]
[ext_resource type="Texture2D" uid="uid://c3drp3txsg0ow" path="res://Assets/frame_29_delay-0.03s3.png" id="31_bhc51"]
[ext_resource type="Texture2D" uid="uid://dvwlyts18ajg8" path="res://Assets/frame_30_delay-0.03s3.png" id="32_bb3e7"]
[ext_resource type="Texture2D" uid="uid://pwefahj4js0n" path="res://Assets/frame_31_delay-0.04s3.png" id="33_qmnhs"]
[ext_resource type="Texture2D" uid="uid://dpwlamupmh6y3" path="res://Assets/frame_32_delay-0.03s3.png" id="34_sc1n7"]
[ext_resource type="Texture2D" uid="uid://bfksgaaf8o1wp" path="res://Assets/frame_33_delay-0.03s3.png" id="35_ktjl3"]
[ext_resource type="Texture2D" uid="uid://bcgjeha6jt60a" path="res://Assets/frame_34_delay-0.04s3.png" id="36_bkqxx"]
[ext_resource type="Texture2D" uid="uid://c707lwl4r2x23" path="res://Assets/frame_35_delay-0.03s3.png" id="37_4pyf8"]
[ext_resource type="Texture2D" uid="uid://dmlxl5t2bv66p" path="res://Assets/frame_36_delay-0.03s3.png" id="38_5i5af"]
[ext_resource type="Texture2D" uid="uid://xu2387xmv2v1" path="res://Assets/frame_37_delay-0.04s3.png" id="39_1lt4o"]
[ext_resource type="Texture2D" uid="uid://dy5eoib25e172" path="res://Assets/frame_38_delay-0.03s3.png" id="40_y0ui1"]
[ext_resource type="Texture2D" uid="uid://bx0yb1o7ovq1x" path="res://Assets/frame_39_delay-0.03s3.png" id="41_pscqi"]
[ext_resource type="Texture2D" uid="uid://csgc70rrmabjd" path="res://Assets/frame_40_delay-0.04s3.png" id="42_n6q0e"]
[ext_resource type="Texture2D" uid="uid://deijhws30vysh" path="res://Assets/frame_41_delay-0.03s3.png" id="43_siw32"]
[ext_resource type="Texture2D" uid="uid://b75dwlyet42gd" path="res://Assets/frame_42_delay-0.03s3.png" id="44_p2ais"]
[ext_resource type="Texture2D" uid="uid://18jde3i1182s" path="res://Assets/frame_43_delay-0.04s3.png" id="45_th8bj"]
[ext_resource type="Texture2D" uid="uid://cfx8a8ho6msei" path="res://Assets/frame_44_delay-0.03s3.png" id="46_cdvgx"]
[ext_resource type="Texture2D" uid="uid://c4pvmniwf5dpv" path="res://Assets/frame_45_delay-0.03s3.png" id="47_ntusp"]
[ext_resource type="Texture2D" uid="uid://ce4jhgukn2d6h" path="res://Assets/frame_46_delay-0.04s3.png" id="48_q1keu"]
[ext_resource type="Texture2D" uid="uid://b6y0xa75x4aac" path="res://Assets/frame_47_delay-0.03s3.png" id="49_n5lf0"]
[ext_resource type="Texture2D" uid="uid://bxopoy0ga067q" path="res://Assets/frame_48_delay-0.03s3.png" id="50_wnj8j"]
[ext_resource type="Texture2D" uid="uid://b2dob8vsl4da4" path="res://Assets/frame_49_delay-0.04s3.png" id="51_fxpfa"]
[ext_resource type="Texture2D" uid="uid://cm8cl7b4qdg1j" path="res://Assets/frame_50_delay-0.03s3.png" id="52_ckq52"]
[ext_resource type="Texture2D" uid="uid://sqw2pown8wsw" path="res://Assets/frame_51_delay-0.03s3.png" id="53_dsc8u"]
[ext_resource type="Texture2D" uid="uid://bl7y0p8br3iq1" path="res://Assets/frame_52_delay-0.04s3.png" id="54_enjsa"]
[ext_resource type="Texture2D" uid="uid://b66laiyshs1tk" path="res://Assets/frame_53_delay-0.03s3.png" id="55_d2lsj"]
[ext_resource type="Texture2D" uid="uid://bgwydn48waoyi" path="res://Assets/frame_54_delay-0.03s3.png" id="56_iqqxn"]
[ext_resource type="Texture2D" uid="uid://bd2w5w724u7ji" path="res://Assets/frame_55_delay-0.04s3.png" id="57_4phe8"]
[ext_resource type="Texture2D" uid="uid://cuwh68ky4r5bd" path="res://Assets/frame_56_delay-0.03s3.png" id="58_wkn26"]
[ext_resource type="Texture2D" uid="uid://bogrgewsos3fr" path="res://Assets/frame_57_delay-0.03s3.png" id="59_iyqmq"]
[ext_resource type="Texture2D" uid="uid://tnd7ei8wwihv" path="res://Assets/frame_58_delay-0.04s3.png" id="60_lmpkc"]
[ext_resource type="Texture2D" uid="uid://jgqh51r2nuwr" path="res://Assets/frame_59_delay-0.03s3.png" id="61_3jb3f"]
[ext_resource type="Texture2D" uid="uid://d1glulp5bg1j8" path="res://Assets/frame_60_delay-0.03s3.png" id="62_w8ch7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uv6j6"]
animations = [{
"frames": [{
"duration": 0.2,
"texture": ExtResource("2_uypod")
}, {
"duration": 0.2,
"texture": ExtResource("3_vvvwy")
}, {
"duration": 0.2,
"texture": ExtResource("4_hoqk3")
}, {
"duration": 0.2,
"texture": ExtResource("5_68wq8")
}, {
"duration": 0.2,
"texture": ExtResource("6_ydi0q")
}, {
"duration": 0.2,
"texture": ExtResource("7_ri1ed")
}, {
"duration": 0.2,
"texture": ExtResource("8_cff8e")
}, {
"duration": 0.2,
"texture": ExtResource("9_r0uww")
}, {
"duration": 0.2,
"texture": ExtResource("10_nhl53")
}, {
"duration": 0.2,
"texture": ExtResource("11_n6fb7")
}, {
"duration": 0.2,
"texture": ExtResource("12_4v3xf")
}, {
"duration": 0.2,
"texture": ExtResource("13_wnnpp")
}, {
"duration": 0.2,
"texture": ExtResource("14_6qv5y")
}, {
"duration": 0.2,
"texture": ExtResource("15_6ffbm")
}, {
"duration": 0.2,
"texture": ExtResource("16_eqf60")
}, {
"duration": 0.2,
"texture": ExtResource("17_dibpx")
}, {
"duration": 0.2,
"texture": ExtResource("18_q3nwq")
}, {
"duration": 0.2,
"texture": ExtResource("19_ylhon")
}, {
"duration": 0.2,
"texture": ExtResource("20_wu60t")
}, {
"duration": 0.2,
"texture": ExtResource("21_kxsmm")
}, {
"duration": 0.2,
"texture": ExtResource("22_xvpm3")
}, {
"duration": 0.2,
"texture": ExtResource("23_tyqe2")
}, {
"duration": 0.2,
"texture": ExtResource("24_g6el0")
}, {
"duration": 0.2,
"texture": ExtResource("25_pigkp")
}, {
"duration": 0.2,
"texture": ExtResource("26_yqe25")
}, {
"duration": 0.2,
"texture": ExtResource("27_rllq3")
}, {
"duration": 0.2,
"texture": ExtResource("28_br4xl")
}, {
"duration": 0.2,
"texture": ExtResource("29_3i58h")
}, {
"duration": 0.2,
"texture": ExtResource("30_uyh1s")
}, {
"duration": 0.2,
"texture": ExtResource("31_bhc51")
}, {
"duration": 0.2,
"texture": ExtResource("32_bb3e7")
}, {
"duration": 0.2,
"texture": ExtResource("33_qmnhs")
}, {
"duration": 0.2,
"texture": ExtResource("34_sc1n7")
}, {
"duration": 0.2,
"texture": ExtResource("35_ktjl3")
}, {
"duration": 0.2,
"texture": ExtResource("36_bkqxx")
}, {
"duration": 0.2,
"texture": ExtResource("37_4pyf8")
}, {
"duration": 0.2,
"texture": ExtResource("38_5i5af")
}, {
"duration": 0.2,
"texture": ExtResource("39_1lt4o")
}, {
"duration": 0.2,
"texture": ExtResource("40_y0ui1")
}, {
"duration": 0.2,
"texture": ExtResource("41_pscqi")
}, {
"duration": 0.2,
"texture": ExtResource("42_n6q0e")
}, {
"duration": 0.2,
"texture": ExtResource("43_siw32")
}, {
"duration": 0.2,
"texture": ExtResource("44_p2ais")
}, {
"duration": 0.2,
"texture": ExtResource("45_th8bj")
}, {
"duration": 0.2,
"texture": ExtResource("46_cdvgx")
}, {
"duration": 0.2,
"texture": ExtResource("47_ntusp")
}, {
"duration": 0.2,
"texture": ExtResource("48_q1keu")
}, {
"duration": 0.2,
"texture": ExtResource("49_n5lf0")
}, {
"duration": 0.2,
"texture": ExtResource("50_wnj8j")
}, {
"duration": 0.2,
"texture": ExtResource("51_fxpfa")
}, {
"duration": 0.2,
"texture": ExtResource("52_ckq52")
}, {
"duration": 0.2,
"texture": ExtResource("53_dsc8u")
}, {
"duration": 0.2,
"texture": ExtResource("54_enjsa")
}, {
"duration": 0.2,
"texture": ExtResource("55_d2lsj")
}, {
"duration": 0.2,
"texture": ExtResource("56_iqqxn")
}, {
"duration": 0.2,
"texture": ExtResource("57_4phe8")
}, {
"duration": 0.2,
"texture": ExtResource("58_wkn26")
}, {
"duration": 0.2,
"texture": ExtResource("59_iyqmq")
}, {
"duration": 0.2,
"texture": ExtResource("60_lmpkc")
}, {
"duration": 0.2,
"texture": ExtResource("61_3jb3f")
}, {
"duration": 0.2,
"texture": ExtResource("62_w8ch7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Lose" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="ExplosionSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_uv6j6")
autoplay = "default"
frame_progress = 0.927008

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "НЕУСПЕШНО!"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 200.0
offset_right = 100.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
text = "Опитай пак"

[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
